--- a/themes/long-teng/layouts/_default/baseof.html
+++ b/themes/long-teng/layouts/_default/baseof.html
@@ -7,7 +7,7 @@
     <link href="{{ "css/clean.css" | absURL }}" rel="stylesheet" type="text/css">
     <link href="{{ "img/fav.png" | absURL }}" rel="shortcut icon" type="image/x-icon">
     <link href="{{ .Permalink }}" rel="canonical">
-
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="ace2e9b4-c361-4026-9ff6-1d135b9c85e6"></script>
 </head>
 <body>
 <div class="page-wrapper">
