--- a/themes/hugobricks/layouts/shortcodes/brick_services.html
+++ b/themes/hugobricks/layouts/shortcodes/brick_services.html
@@ -4,11 +4,9 @@
 Usage:
 {{< brick_services >}}
 
-{{< breadcrumbs >}}
+# Title Services
 
-# Blog posts
-
-This is a demo of the services page. In ultricies vel enim vel pulvinar. Quisque finibus sem velit, sed consequat mi ullamcorper vitae. Proin finibus tristique sollicitudin.
+Text Above Services
 
 {{< /brick_services >}}  
 */}}
