Fix various small content issues

--- a/static/css/fonts.css
+++ b/static/css/fonts.css
@@ -37,9 +37,9 @@
 }
 @font-face {
   font-family: 'Author-SemiBold';
-  src: url('../fonts/Author-SemiBold.woff2') format('woff2'),
-       url('../fonts/Author-SemiBold.woff') format('woff'),
-       url('../fonts/Author-SemiBold.ttf') format('truetype');
+  src: url('../fonts/Author-Semibold.woff2') format('woff2'),
+       url('../fonts/Author-Semibold.woff') format('woff'),
+       url('../fonts/Author-Semibold.ttf') format('truetype');
   font-weight: 400;
   font-display: swap;
   font-style: normal;
