--- a/themes/hugobricks/layouts/partials/brick_contact.html
+++ b/themes/hugobricks/layouts/partials/brick_contact.html
@@ -1,20 +1,9 @@
-
-{{- $inner := . -}}
-{{- if or (eq $inner "") (eq $inner nil) -}}
-    {{- $inner = "Empty brick found. Consider creating a 'content/bricks/contact.md' file." -}}
-    {{- with page.Site.GetPage "bricks/contact.md" -}}
-        {{- $inner = .RawContent -}}
-    {{- end -}}
-{{- end -}}
-<section class="contact">
-    <div class="container twocols">
-        <div>
+<section>
+    <div class="container">
+        <div class="contact">
             <div class="box">
                 {{- partial "form.html" (index page.Site.Data page.Site.Language.Lang).contactform -}}
             </div>
-        </div>
-        <div class="text">
-            {{- markdownify $inner -}}
         </div>
     </div>
 </section>
