--- a/themes/hugobricks/layouts/_default/baseof.html
+++ b/themes/hugobricks/layouts/_default/baseof.html
@@ -14,6 +14,7 @@
     {{- if .Site.Data.settings.color_name -}}{{- $color = .Site.Data.settings.color_name -}}{{- end -}}
     <link href="/css/{{ $color }}.css?version={{ now }}" rel="stylesheet">
     <script defer src="https://cloud.umami.is/script.js" data-website-id="ace2e9b4-c361-4026-9ff6-1d135b9c85e6"></script>
+    <script src="https://unpkg.com/@botpoison/browser" async></script>
     
   </head>
   <body id="top" class="{{ if in (substr .Content  0 100) `transparent_header` }}transparent_header{{ end }} filename_{{ with .File }}{{ .BaseFileName }}{{ end }}">
